# accounts-manager-cli

./: CMakeLists.txt  README.md  dfjlclear
include/: Account.h  AccountIDGenerator.h  AccountIDValidator.h  AccountUpdater.h  Accounts.h  AccountsGetterByName.h  NewAccountIDGenerator.h
src/: Account.cpp  Account.h  AccountIDGenerator.cpp  AccountIDValidator.cpp  AccountUpdater.cpp  Accounts.cpp  Accounts.h  AccountsGetterByName.cpp  NewAccountIDGenerator.cpp  main.cpp
tests/: Account.test.cpp  AccountIDGenerator.test.cpp  AccountIDValidator.test.cpp  AccountUpdater.test.cpp  Accounts.test.cpp  AccountsGetterByName.test.cpp  NewAccountIDGenerator.test.cpp
